--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>simon game </title>
-    <link rel="stylesheet" href="simon.css" />
+    <link rel="stylesheet" href="index.css" />
 
 </head>
 <body>
@@ -26,7 +26,7 @@
     </div>
     
 
-    <script src="simon.js"></script>
+    <script src="index.css"></script>
 
 </body>
 </html>
